src/objects/SIC_Code_Mapping__mdt.object
<CustomObject>
    <description>Used to match a 4 digit SIC code to it&apos;s description</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>SIC Code description</description>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Group__c</fullName>
        <description>In Credit Lens SIC codes are categorized in groups of letters that all relate to one another.</description>
        <label>Letter Group</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Number that matches to a description in Credit Lens</description>
        <label>Number</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SIC Code Mapping</label>
    <pluralLabel>SIC Code Mappings</pluralLabel>
</CustomObject>